--- a/Mcv3/Views/Movies/Index.cshtml
+++ b/Mcv3/Views/Movies/Index.cshtml
@@ -16,8 +16,18 @@
             <option value="">All</option>
         </select>
 
+        Sort By:
+
+        <select asp-for="Time">
+            <option value="">Ascending</option>
+            <option value="">Descending</option>
+
+        </select>
+
         Title: <input type="text" asp-for="SearchString" />
         <input type="submit" value="Filter" />
+
+
     </p>
 </form>
 <table class="table">
