--- a/Mcv3/Views/Movies/Details.cshtml
+++ b/Mcv3/Views/Movies/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            <img src="~/Images/TheRM.jpg" alt="" height=150 width=100 />
+        </dt>
+        <dt class="col-sm-10">
+            <img src="~/Images/TheRM.jpg" style="opacity:0" alt="" height=150 width=100 />
+        </dt>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class="col-sm-10">
